ci: add mc-publish support for Modrinth publishing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,3 +51,9 @@ jobs:
         with:
           name: Curious Curios
           path: build/libs/*.jar
+          
+      - name: Publish to Modrinth
+        uses: Kir-Antipov/mc-publish@v3.3
+        with:
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          modrinth-featured: false
