--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,5 +55,6 @@ jobs:
       - name: Publish to Modrinth
         uses: Kir-Antipov/mc-publish@v3.3
         with:
+          modrinth-id: curious-curios
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
           modrinth-featured: false
